<resources>
    <string name="connection_type">BLUETOOTH</string>
    <string name="packer_Type">JSON</string>
    <string name="bamboo_build_number">93.6.0.1.6.0.1.6.0.1.6.0.1.6.0.1.6.0.1</string>
    <string name="build_type">release</string>
    <string name="device_type">toq</string>
    <string name="transfer_type">OPP</string>
    <string name="app_name">Qualcomm Toq</string>
    <string name="ep_app_name">Qualcomm Toq Headsets</string>
    <string name="title_connected">Connected</string>
    <string name="title_not_connected">Not Connected</string>
    <string name="pop_up_text">[Pop up Text]</string>
    <string name="toggle_row_primary_text">TEXT</string>
    <string name="toggle_row_secondary_text">text</string>
    <string name="done">Done</string>
    <string name="delete">DELETE</string>
    <string name="cancel">Cancel</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="device_status">Device Connection Status</string>
    <string name="find_wd">FIND WRIST DISPLAY</string>
    <string name="select_calendar">CALENDAR</string>
    <string name="stock">STOCKS</string>
    <string name="weather">WEATHER</string>
    <string name="device_connected_text">CONNECTED</string>
    <string name="device_disconnected_text">DISCONNECTED</string>
    <string name="preferences_text">PREFERENCES</string>
    <string name="application_title">Qualcomm Toq</string>
    <string name="ep_application_title">Qualcomm Toq Headsets</string>
    <string name="ep_main_screen_combined_application_title">Toq headsets</string>
    <string name="open_source_license_text">&lt;u>View Open Source License&lt;u></string>
    <string name="roboto_light">Roboto Light</string>
    <string name="roboto_medium">Roboto Medium</string>
    <string name="roboto_thin">Roboto Thin</string>
    <string name="roboto_regular">Roboto Regular</string>
    <string name="eula_screen_content_file_ext">file:///android_asset/eulaScreenContent.html</string>
    <string name="logs_not_available">External memory not available</string>
    <string name="browser_disabled_text">No web browser was found. Please install a web browser and try again.</string>
    <string name="activity_card_title_text">Activity</string>
    <string name="phone">PHONE</string>
    <string name="text_messaging">TEXT MESSAGING</string>
    <string name="findDialog_text">"Phone Found
Please click Cancel Button
to stop Alarm"</string>
    <string name="action_search">Search</string>
    <string name="status_icon_text">CONNECTED</string>
    <string name="version_date_text">Continue the installation from your watch.</string>
    <string name="software_update_transfer_text">Initiating Transfer</string>
    <string name="transfer_complete_secondary_text">Watch will disconnect during the update.</string>
    <string name="watch_connecting_text">Connecting</string>
    <string name="watch_connect_text">Connect</string>
    <string name="battery_percentage_text">0%</string>
    <string name="qr_yes">Yes</string>
    <string name="qr_no">No</string>
    <string name="qr_1">"I'll call you back soon."</string>
    <string name="qr_2">"I'll text you back soon."</string>
    <string name="qr_3">In a meeting.Will call you back later.</string>
    <string name="qr_4">Sorry, running late.</string>
    <string name="ok">OK</string>
    <string name="quick_reply_max_characters_info">Quick reply messages exceeding max character size of 160 !!</string>
    <string name="new_quick_reply_dialog_title">New Quick Reply</string>
    <string name="quick_reply_dialog_title">Quick Reply Message</string>
    <string name="qr_dialog_edit_text_view">Type new Quick Reply</string>
    <string name="qr_count_text">0/160</string>
    <string name="qr_dialog_save_button">Save</string>
    <string name="quick_reply_title_name">QUICK REPLIES</string>
    <string name="start_logging_menu_item">Start Logging</string>
    <string name="stop_logging_menu_item">Stop Logging</string>
    <string name="start_logging">Start Logging</string>
    <string name="share_log">Share Log</string>
    <string name="find_wd_txt">Find WD</string>
    <string name="share_pics">Share Pics</string>
    <string name="log_activity_db">Log Activity DB</string>
    <string name="set_tftp_size">Set TFTP Size</string>
    <string name="ds_tcp_port_hint">Enter TCP/IP Port (5000)</string>
    <string name="ds_tcp_address_hint">Enter TCP/IP address (10.0.2.2)</string>
    <string name="stock_url">https://api.etrade.com/v1/market/quote/</string>
    <string name="weather_current_cond_url">http://api.accuweather.com/currentconditions/v1/%1$s.json?apikey=%2$s</string>
    <string name="weather_forecast_url">http://api.accuweather.com/forecasts/v1/daily/1day/%1$s?apikey=%2$s</string>
    <string name="autocomplete_weather_url">http://api.accuweather.com/locations/v1/cities/autocomplete?q=%1$s&amp;apikey=%2$s</string>
    <string name="autocomplete_weather_url_zh">http://api.accuweather.com/locations/v1/cities/autocomplete?q=%1$s&amp;apikey=%2$s&amp;language=zh</string>
    <string name="autocomplete_stock_url">https://api.etrade.com/v1/market/lookup/%1$s.json</string>
    <string name="geolocation_weather_url">http://api.accuweather.com/locations/v1/cities/geoposition/search.json?q=%1$s,%2$s&amp;apikey=%3$s</string>
    <string name="stock_footer_middle_text">&lt;a href=\"https://play.google.com/store/apps/details?id=com.etrade.mobilepro.activity\">Get it on Google Play&lt;/a></string>
    <string name="weather_footer_middle_text">&lt;a href=\"https://play.google.com/store/apps/details?id=com.accuweather.android&amp;referrer=utm_source%3Dqualcomm\">Get it on Google Play&lt;/a></string>
    <string name="stock_search_view_hint">Company Name or Ticker</string>
    <string name="weather_search_view_hint">Enter City Name</string>
    <string name="error_msg">Please select the text</string>
    <string name="stock_title">STOCKS</string>
    <string name="weather_title">WEATHER / WORLD TIME</string>
    <string name="stock_footer_top_text">Powered by E*TRADE Securities LLC</string>
    <string name="local_weather_secondary_text">Allows Toq to use location for weather</string>
    <string name="weather_footer_top_text">Powered by AccuWeather.com</string>
    <string name="weather_change_units_text">Change units</string>
    <string name="show_local_weather">Show Local Weather</string>
    <string name="footer_top_text">[Footer Top Text]</string>
    <string name="secondary_text">[Secondary Text]</string>
    <string name="footer_bottom_text">[Footer Bottom Text]</string>
    <string name="qcom_bold">Q-Bold.otf</string>
    <string name="qcom_regular">Q-Regular.otf</string>
    <string name="qcom_light">Q-Light.otf</string>
    <string name="qcom_semibold">Q-Semibold.otf</string>
    <string name="roboto_thin_file">Roboto-Thin.ttf</string>
    <string name="roboto_regular_file">Roboto-Regular.ttf</string>
    <string name="roboto_light_file">Roboto-Light.ttf</string>
    <string name="roboto_medium_file">Roboto-Medium.ttf</string>
    <string name="context_menu_title">Choose FTP Actions</string>
    <string name="notifications_search_view_hint">App name</string>
    <string name="notification_instruction_text">Select the Android applications that will be allowed to send notifications to your watch.</string>
    <string name="notification_title_text">NOTIFICATIONS</string>
    <string name="notification_done_text">Done</string>
    <string name="accessibility_prompt_header">Accessibility service for Toq must be enabled to send notifications for Android applications to your watch.</string>
    <string name="accessibility_prompt_sub_header">"Look for 'Qualcomm Toq' in the Accesibility Settings and turn it on."</string>
    <string name="accessibility_settings_text">Accessibility Settings</string>
    <string name="accessibility_prompt_header_jelly_bean">Notification access for Toq must be enabled to send notifications for Android applications to your watch.</string>
    <string name="accessibility_prompt_sub_header_jelly_bean">"Look for 'Qualcomm Toq' in the Notification access screen and turn it on."</string>
    <string name="accessibility_settings_text_jelly_bean">Notification Access</string>
    <string name="notification_loading_text">Loading installed apps …</string>
    <string name="accessibility_prompt_sub_header_sub_text">"'Qualcomm Toq'"</string>
    <string name="calendar_instruction_text">Select which calendar accounts you would like to sync to your watch.</string>
    <string name="calendar_title_text">CALENDAR</string>
    <string name="fav_app_dialog_title">Save changes?</string>
    <string name="fav_app_dialog_cancel">Cancel</string>
    <string name="fav_app_dialog_continue">Continue</string>
    <string name="fav_app_dialog_text">Your watch will restart to apply these changes</string>
    <string name="carousel_no_applet_text">Tap an applet below to add as a favorite</string>
    <string name="fav_app_launcher_text">Applet Launcher</string>
    <string name="fav_app_done_text">Done</string>
    <string name="fav_app_title">FAVORITE APPLETS</string>
    <string name="fav_app_deactivate_text">"This page cannot
be changed"</string>
    <string name="clocks_settings_dialog_title">Clock Styles</string>
    <string name="clocks_settings_dialog_message">Please select atleast one clock from options</string>
    <string name="clocks_settings_dialog_weather_grid_title">Weather Grid</string>
    <string name="clock_settings_dialog_stocks_title">Stocks</string>
    <string name="clock_settings_dialog_world_clock_title">World Time</string>
    <string name="clock_settings_dialog_activity_title">Activity</string>
    <string name="clocks_settings_dialog_degrees_title">Degrees</string>
    <string name="clocks_settings_dialog_weather_grid_preference">"Open Weather
Preferences"</string>
    <string name="clock_settings_dialog_stocks_preference">"Open Stocks
Preferences"</string>
    <string name="clock_settings_dialog_world_clock_preference">"Open World Time
Preferences"</string>
    <string name="clock_settings_dialog_activity_preference">"Open Activity
Preferences"</string>
    <string name="activity_dialog_title_text">Activity score</string>
    <string name="activity_dialog_text">Toq Activity Points are provided to allow you to personally assess your overall activity. Points are assigned for steps and movements in several types of activities to give you a complete daily activity score. Activity Points do not have any monetary value and are not redeemable for any goods or services.</string>
    <string name="activity_ok_button">OK</string>
    <string name="music_title_text">Music Player</string>
    <string name="music_instruction_text">Select the music player that you would like Toq to control on your phone.</string>
    <string name="ep_main_screen_primary_icon_text">Used for calls</string>
    <string name="bass_boost_dialog_title">Adjust Bass</string>
    <string name="bass_boost_dialog_desc">Please select the bass level low or high to enhance the sound quality.</string>
    <string name="bass_boost_dialog_off_text">Off</string>
    <string name="bass_boost_dialog_low_bass_text">Low</string>
    <string name="bass_boost_dialog_medium_bass_text">Med</string>
    <string name="bass_boost_dialog_high_bass_text">High</string>
    <string name="bass_boost_dialog_applying_setting_text">Applying setting…</string>
    <string name="description_applet_launcher">applet_launcher</string>
    <string name="description_dialog_app_image">dialog_app</string>
    <string name="description_action_bar_menu">menu</string>
    <string name="description_action_bar_done">done</string>
    <string name="description_ep_icon_image_view">icon_image_view</string>
    <string name="description_ep_connection_status_icon">connection_status</string>
    <string name="description_ep_battery_status">ep_battery_status</string>
    <string name="description_ep_info">ep_info</string>
</resources>