<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.qualcomm.toq.base.ui.customview.PhubTextView android:textSize="22.0sp" android:textColor="#ff35b5e4" android:layout_gravity="left|center" android:id="@id/bass_boost_dialog_title_text" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:text="@string/bass_boost_dialog_title" custom:font="@string/roboto_medium" />
    </LinearLayout>
    <View android:background="#ffe2e2e1" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <com.qualcomm.toq.base.ui.customview.PhubTextView android:textSize="18.0sp" android:textColor="#ff787777" android:layout_gravity="left|center" android:id="@id/bass_boost_dialog_desc_text" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/bass_boost_dialog_desc" custom:font="@string/roboto_regular" />
    <RadioGroup android:orientation="horizontal" android:id="@id/bass_boost_radio_button_group" android:background="@drawable/ep_bass_buttons_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="26.0dip" android:layout_marginRight="20.0dip" android:weightSum="3.0" android:checkedButton="@id/bass_boost_button_off">
        <RadioButton android:textSize="14.0sp" android:textColor="#ff999999" android:gravity="center" android:id="@id/bass_boost_button_off" android:background="@drawable/ep_bass_boost_dialog_radio_button_selector" android:layout_marginLeft="3.0dip" android:layout_marginTop="3.0dip" android:layout_marginRight="1.5dip" android:layout_marginBottom="3.0dip" android:button="@null" android:minWidth="0.0dip" android:minHeight="40.0dip" android:text="@string/bass_boost_dialog_off_text" android:layout_weight="1.0" />
        <RadioButton android:textSize="14.0sp" android:textColor="#ff999999" android:gravity="center" android:id="@id/bass_boost_button_low" android:background="@drawable/ep_bass_boost_dialog_radio_button_selector" android:layout_marginLeft="1.5dip" android:layout_marginTop="3.0dip" android:layout_marginRight="1.5dip" android:layout_marginBottom="3.0dip" android:button="@null" android:minWidth="0.0dip" android:minHeight="40.0dip" android:text="@string/bass_boost_dialog_low_bass_text" android:layout_weight="1.0" />
        <RadioButton android:textSize="14.0sp" android:textColor="#ff999999" android:gravity="center" android:id="@id/bass_boost_button_medium" android:background="@drawable/ep_bass_boost_dialog_radio_button_selector" android:layout_marginLeft="1.5dip" android:layout_marginTop="3.0dip" android:layout_marginRight="1.5dip" android:layout_marginBottom="3.0dip" android:button="@null" android:minWidth="0.0dip" android:minHeight="40.0dip" android:text="@string/bass_boost_dialog_medium_bass_text" android:layout_weight="1.0" />
        <RadioButton android:textSize="14.0sp" android:textColor="#ff999999" android:gravity="center" android:id="@id/bass_boost_button_high" android:background="@drawable/ep_bass_boost_dialog_radio_button_selector" android:layout_marginLeft="1.5dip" android:layout_marginTop="3.0dip" android:layout_marginRight="3.0dip" android:layout_marginBottom="3.0dip" android:button="@null" android:minWidth="0.0dip" android:minHeight="40.0dip" android:text="@string/bass_boost_dialog_high_bass_text" android:layout_weight="1.0" />
    </RadioGroup>
    <View android:background="#ffe2e2e1" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="26.0dip" />
    <Button android:textSize="16.0sp" android:textColor="@android:color/black" android:gravity="center" android:layout_gravity="center" android:id="@id/bass_boost_dialog_cancel_button" android:background="@drawable/dialog_items_selector" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/done" />
    <LinearLayout android:orientation="horizontal" android:id="@id/bass_boost_progress_image_layout" android:background="@android:color/white" android:paddingBottom="13.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="13.0dip">
        <ProgressBar android:layout_gravity="left|center" android:id="@id/bass_boost_progress_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:indeterminateDrawable="@drawable/ep_headset_small_progress_drawable" />
        <com.qualcomm.toq.base.ui.customview.PhubTextView android:textSize="16.0sp" android:textColor="#ff787777" android:layout_gravity="left|center" android:id="@id/bass_boost_progress_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/bass_boost_dialog_applying_setting_text" android:singleLine="true" custom:font="@string/roboto_regular" />
    </LinearLayout>
</LinearLayout>