<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_width="wrap_content" android:layout_height="60.0dip">
        <com.qualcomm.toq.base.ui.customview.PhubTextView android:textSize="24.0sp" android:textColor="#ff5eb7c8" android:layout_gravity="left|center" android:id="@id/dialog_title_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/fav_app_dialog_title" custom:font="@string/roboto_medium" />
    </LinearLayout>
    <View android:id="@id/dialog_title_divider" android:background="#ff5eb7c8" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <LinearLayout android:orientation="horizontal" android:id="@id/dialog_app_info_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip">
        <ImageView android:layout_gravity="left|center" android:id="@id/dialog_app_image" android:layout_width="0.0dip" android:layout_height="40.0dip" android:layout_weight="0.1" android:contentDescription="@string/description_dialog_app_image" />
        <com.qualcomm.toq.base.ui.customview.PhubTextView android:textSize="18.0sp" android:textColor="@android:color/black" android:ellipsize="end" android:layout_gravity="left|center" android:id="@id/dialog_app_name" android:paddingLeft="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="0.725" custom:font="@string/roboto_medium" />
    </LinearLayout>
    <LinearLayout android:id="@id/dialog_content_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="15.0dip">
        <com.qualcomm.toq.base.ui.customview.PhubTextView android:textSize="18.0sp" android:textColor="@android:color/black" android:layout_gravity="left|center" android:id="@id/dialog_text_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fav_app_dialog_text" custom:font="@string/roboto_regular_file" />
    </LinearLayout>
    <View android:background="#ffe2e2e1" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:id="@id/custom_dialog_button_layout" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <Button android:textSize="16.0sp" android:textColor="@android:color/black" android:gravity="center" android:layout_gravity="center" android:id="@id/dialog_button_1" android:layout_width="wrap_content" android:layout_height="50.0dip" android:text="@string/fav_app_dialog_cancel" android:layout_weight="5.0" />
        <View android:background="#ffe2e2e1" android:layout_width="1.0dip" android:layout_height="50.0dip" />
        <Button android:textSize="16.0sp" android:textColor="@android:color/black" android:gravity="center" android:layout_gravity="center" android:id="@id/dialog_button_2" android:layout_width="wrap_content" android:layout_height="50.0dip" android:text="@string/fav_app_dialog_continue" android:layout_weight="5.0" />
    </LinearLayout>
</LinearLayout>