<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/music_settings_root" android:background="#ff2f3234" android:layout_width="fill_parent" android:layout_height="fill_parent" android:splitMotionEvents="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:orientation="horizontal" android:id="@id/music_settings_title_bar" android:background="@drawable/title_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:splitMotionEvents="false">
        <LinearLayout android:orientation="horizontal" android:id="@id/music_settings_done_layout" android:background="@drawable/done_selector" android:layout_width="wrap_content" android:layout_height="47.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
            <ImageView android:layout_gravity="left|center" android:id="@id/music_action_bar_done_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="11.0dip" android:src="@drawable/action_bar_done_selector" android:contentDescription="@string/description_action_bar_done" />
            <com.qualcomm.toq.base.ui.customview.PhubTextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@id/music_action_bar_done_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/notification_done_text" custom:font="@string/roboto_regular" />
            <View android:layout_gravity="center" android:background="#ff505454" android:layout_width="1.0dip" android:layout_height="24.0dip" android:layout_marginLeft="15.0dip" />
        </LinearLayout>
        <ImageView android:id="@id/music_settings_menu_bar_image" android:background="@drawable/action_bar_menu_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="11.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/description_action_bar_menu" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/music_settings_text" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/music_settings_title_bar" android:splitMotionEvents="false">
        <com.qualcomm.toq.base.ui.customview.PhubTextView android:textSize="26.0sp" android:textColor="#ff98a0a0" android:gravity="center" android:layout_gravity="left|center" android:id="@id/music_settings_title_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginTop="5.0dip" android:text="@string/music_title_text" custom:font="@string/roboto_light" />
        <com.qualcomm.toq.base.ui.customview.PhubTextView android:textSize="15.0sp" android:textColor="#ff98a0a0" android:gravity="left" android:layout_gravity="left|center" android:id="@id/music_settings_instruction" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/music_instruction_text" custom:font="@string/roboto_light" />
        <View android:background="#ff6d6f71" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="15.0dip" />
        <include android:id="@id/default_music_player_layout" layout="@layout/advanced_settings_inflator" />
        <include android:id="@id/double_twist_player_layout" layout="@layout/advanced_settings_inflator" />
    </LinearLayout>
</RelativeLayout>